--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "javascriptreactboilerplate",
+  "name": "sportstream-linode",
   "version": "1.0.0",
-  "description": "A better React boilerplate.",
-  "main": "src/server.js",
+  "description": "The SportStream MVP",
+  "main": "server/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node server/server.js",
     "start:dev": "concurrently --kill-others \"npm run build:dev_Nodemon\" \"npm run build:dev_Webpack\"",
     "build:dev": "webpack",
-    "build:dev_Nodemon": "nodemon src/server.js -e js,css,html,hbs",
+    "build:dev_Nodemon": "nodemon server/server.js -e js,css,html,hbs",
     "build:dev_Webpack": "webpack --watch",
     "build:prod": "webpack -p --env production",
     "test": "jest --config=jest.config.json",
-    "test:watch": "npm run test -- --watch",
-    "deploy:firebase": "npm run build:prod & firebase deploy"
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -32,9 +31,9 @@
   "author": "Robby Bergers",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/RobbyB97/JavascriptReactBoilerplate/issues"
+    "url": "https://github.com/RobbyB97/sportstream-linode/issues"
   },
-  "homepage": "https://github.com/RobbyB97/JavascriptReactBoilerplate#readme",
+  "homepage": "https://github.com/RobbyB97/sportstream-linode#readme",
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
