configure for env-cmd
install env-cmd, add .rc configuration for production and development environments, update the package scripts and refactor server file to utilize env-cmd variables properly.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node server/server.js",
     "start:dev": "concurrently --kill-others \"npm run build:dev_Nodemon\" \"npm run build:dev_Webpack\"",
+    "start:prod": "npm run build:prod & env-cmd production node server/server.js",
     "build:dev": "webpack",
-    "build:dev_Nodemon": "nodemon server/server.js -e js,css,html,hbs",
+    "build:dev_Nodemon": "env-cmd development nodemon server/server.js -e js,css,html,hbs",
     "build:dev_Webpack": "webpack --watch",
     "build:prod": "webpack -p --env production",
     "test": "jest --config=jest.config.json",
