--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "css-loader": "^0.28.4",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "node-cron": "^2.0.3",
     "nodemon": "^1.19.1",
     "normalize.css": "^7.0.0",
     "raf": "^3.3.2",
@@ -59,6 +60,7 @@
     "react-router-hash-link": "^2.1.0",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
+    "shelljs": "^0.8.4",
     "style-loader": "^0.18.2",
     "uuid": "^3.1.0",
     "validator": "^11.0.0",
