update environment variable to specify HTTP port
The HTTP port is different for dev and prod environments, so it is set in the env-cmdrc

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -1,10 +1,10 @@
 {
     "development": {
         "NAME": "development",
-        "PORT": 3000
+        "HTTP_PORT": 3000
     },
     "production": {
         "NAME": "production",
-        "PORT": 443
+        "HTTP_PORT": 443
     }
 }
