--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "css-loader": "^0.28.4",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "mongoose": "^5.10.11",
     "node-cron": "^2.0.3",
     "nodemon": "^1.19.1",
     "normalize.css": "^7.0.0",
