--- a/package.json
+++ b/package.json
@@ -45,13 +45,16 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.5.2",
     "chalk": "^2.4.2",
+    "child_process": "^1.0.2",
     "css-loader": "^0.28.4",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "mongoose": "^5.10.11",
     "node-cron": "^2.0.3",
+    "node-media-server": "^2.2.4",
     "nodemon": "^1.19.1",
     "normalize.css": "^7.0.0",
+    "passport": "^0.4.1",
     "raf": "^3.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.0.0",
