--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
+    "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.5.2",
     "chalk": "^2.4.2",
     "child_process": "^1.0.2",
