--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:dev_Webpack": "webpack --watch",
     "build:prod": "webpack -p --env production",
     "test": "jest --config=jest.config.json",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "generate-cert": "chmod +x ./server/ssl/generate-certificates.sh & ./server/ssl/generate-certificates.sh"
   },
   "repository": {
     "type": "git",
