Create http_production mode
This is needed for certbot authentication

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -3,8 +3,13 @@
         "NAME": "development",
         "HTTP_PORT": 3000
     },
-    "production": {
-        "NAME": "production",
-        "HTTP_PORT": 443
+    "https_production": {
+        "NAME": "https_production",
+        "HTTPS_PORT": 443,
+        "HTTP_PORT": 8080
+    },
+    "http_production": {
+        "NAME": "http_production",
+        "HTTP_PORT": 80
     }
 }
