--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "start": "node server/server.js",
     "start:dev": "concurrently --kill-others \"npm run build:dev_Nodemon\" \"npm run build:dev_Webpack\"",
-    "start:prod": "npm run build:prod & env-cmd production node server/server.js",
+    "start:prod": "npm run build:prod & env-cmd https_production node server/server.js",
+    "start:http": " npm run build:prod & env-cmd http_production node server/server.js",
     "build:dev": "webpack",
     "build:dev_Nodemon": "env-cmd development nodemon server/server.js -e js,css,html,hbs",
     "build:dev_Webpack": "webpack --watch",
     "build:prod": "webpack -p --env production",
     "test": "jest --config=jest.config.json",
-    "test:watch": "npm run test -- --watch",
-    "generate-cert": "sudo chmod +x ./server/ssl/generate-certificates.sh & ./server/ssl/generate-certificates.sh"
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
