add httpsOptions for SSL

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -6,7 +6,8 @@
     "https_production": {
         "NAME": "https_production",
         "HTTPS_PORT": 443,
-        "HTTP_PORT": 8080
+        "HTTP_PORT": 8080,
+        "SSL_DIR": "/etc/letsencrypt/live/castamatch.com/"
     },
     "http_production": {
         "NAME": "http_production",
