--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/server.js",
     "start:dev": "concurrently --kill-others \"npm run build:dev_Nodemon\" \"npm run build:dev_Webpack\"",
-    "start:prod": "npm run build:prod & env-cmd https_production node server/server.js",
+    "start:https": "npm run build:prod & env-cmd https_production node server/server.js",
     "start:http": " npm run build:prod & env-cmd http_production node server/server.js",
     "build:dev": "webpack",
     "build:dev_Nodemon": "env-cmd development nodemon server/server.js -e js,css,html,hbs",
