--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "chalk": "^2.4.2",
     "child_process": "^1.0.2",
