--- a/package.json
+++ b/package.json
@@ -49,8 +49,12 @@
     "bootstrap": "^4.5.2",
     "chalk": "^2.4.2",
     "child_process": "^1.0.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "css-loader": "^0.28.4",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "mongoose": "^5.10.11",
     "node-cron": "^2.0.3",
@@ -58,6 +62,7 @@
     "nodemon": "^1.19.1",
     "normalize.css": "^7.0.0",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "raf": "^3.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.0.0",
@@ -68,6 +73,7 @@
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "shelljs": "^0.8.4",
+    "shortid": "^2.2.16",
     "style-loader": "^0.18.2",
     "uuid": "^3.1.0",
     "validator": "^11.0.0",
