add cors to env variables

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -1,16 +1,19 @@
 {
     "development": {
         "NAME": "development",
-        "HTTP_PORT": 3000
+        "HTTP_PORT": 3000,
+        "CORS_ORIGIN": "http://localhost:3000"
     },
     "https_production": {
         "NAME": "https_production",
         "HTTPS_PORT": 443,
         "HTTP_PORT": 80,
-        "SSL_DIR": "/etc/letsencrypt/live/castamatch.com/"
+        "SSL_DIR": "/etc/letsencrypt/live/castamatch.com/",
+        "CORS_ORIGIN": "https://castamatch.com"
     },
     "http_production": {
         "NAME": "http_production",
-        "HTTP_PORT": 80
+        "HTTP_PORT": 80,
+        "CORS_ORIGIN": "http://castamatch.com"
     }
 }
