--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
-    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "chalk": "^2.4.2",
@@ -57,7 +57,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
-    "mongoose": "^5.10.11",
+    "mongoose": "^5.9.12",
     "node-cron": "^2.0.3",
     "node-media-server": "^2.2.4",
     "nodemon": "^1.19.1",
