--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
       "sourceMap": true,                     /* Generates corresponding '.map' file. */
       // "outFile": "./",                       /* Concatenate and emit output to single file. */
-      //"outDir": "./dist",                        /* Redirect output structure to the directory. */
+      "outDir": "./server",                        /* Redirect output structure to the directory. */
       "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
       // "composite": true,                     /* Enable project compilation */
       "removeComments": true,                /* Do not emit comments to output. */
@@ -24,7 +24,7 @@
       // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
       // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
       // "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
-      "noEmitOnError": true,
+      "noEmitOnError": false,
   
       /* Strict Type-Checking Options */
       "strict": true,                           /* Enable all strict type-checking options. */
@@ -64,6 +64,7 @@
       // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     },
     "exclude": [
-      "node_modules" // would be the default
+      "node_modules", // would be the default
+      "server/tests"
     ]
   }
