--- a/package.json
+++ b/package.json
@@ -61,10 +61,8 @@
     "mongoose": "^5.9.12",
     "node-cron": "^2.0.3",
     "node-media-server": "^2.2.4",
-    "nodemon": "^1.19.1",
     "normalize.css": "^7.0.0",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "raf": "^3.3.2",
     "react": "^16.13.1",
@@ -78,12 +76,26 @@
     "shelljs": "^0.8.4",
     "shortid": "^2.2.16",
     "style-loader": "^0.18.2",
-    "typescript": "^4.0.5",
     "uuid": "^3.1.0",
     "validator": "^11.0.0",
     "webpack": "^3.1.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.8",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/express": "^4.17.9",
+    "@types/express-session": "^1.17.2",
+    "@types/jest": "^26.0.15",
+    "@types/mongoose": "^5.10.0",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
+    "@types/react": "^16.9.56",
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
     "concurrently": "^4.1.2",
     "env-cmd": "^8.0.2",
     "enzyme": "^3.0.0",
@@ -91,9 +103,12 @@
     "enzyme-to-json": "^3.6.1",
     "jest": "^20.0.4",
     "node-sass": "^4.14.1",
+    "nodemon": "^1.19.1",
     "parallelshell": "^3.0.1",
     "react-test-renderer": "^16.0.0",
     "sass": "^1.26.11",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5",
     "webpack-dev-server": "^3.8.0"
   }
 }
