--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "child_process": "^1.0.2",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "css-loader": "^0.28.4",
     "express": "^4.17.1",
@@ -81,6 +82,8 @@
     "webpack": "^3.1.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.9",
     "concurrently": "^4.1.2",
     "env-cmd": "^8.0.2",
     "enzyme": "^3.0.0",
@@ -91,6 +94,8 @@
     "parallelshell": "^3.0.1",
     "react-test-renderer": "^16.0.0",
     "sass": "^1.26.11",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.1.2",
     "webpack-dev-server": "^3.8.0"
   }
 }
