set ffmpeg path as environment variable
this path string is different depending on whether it is on a development machine or the production server, so it makes more sense to put it in an environment variable

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -2,7 +2,8 @@
     "development": {
         "NAME": "development",
         "HTTP_PORT": 3000,
-        "CORS_ORIGIN": "http://localhost:3000"
+        "CORS_ORIGIN": "http://localhost:3000",
+        "FFMPEG_PATH": "C:/users/berge/ffmpeg"
     },
     "https_production": {
         "NAME": "https_production",
