--- a/package.json
+++ b/package.json
@@ -82,8 +82,12 @@
     "webpack": "^3.1.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
+    "@types/mongoose": "^5.10.1",
     "@types/node": "^14.14.9",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
     "concurrently": "^4.1.2",
     "env-cmd": "^8.0.2",
     "enzyme": "^3.0.0",
