--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -3,18 +3,21 @@
         "NAME": "development",
         "HTTP_PORT": 3000,
         "CORS_ORIGIN": "http://localhost:3000",
-        "FFMPEG_PATH": "C:/users/berge/ffmpeg"
+        "FFMPEG_PATH": "C:/users/berge/ffmpeg",
+        "DB_NAME": "castamatchdev"
     },
     "https_production": {
         "NAME": "https_production",
         "HTTPS_PORT": 443,
         "HTTP_PORT": 80,
         "SSL_DIR": "/etc/letsencrypt/live/castamatch.com/",
-        "CORS_ORIGIN": "https://castamatch.com"
+        "CORS_ORIGIN": "https://castamatch.com",
+        "DB_NAME": "castamatch"
     },
     "http_production": {
         "NAME": "http_production",
         "HTTP_PORT": 80,
-        "CORS_ORIGIN": "http://castamatch.com"
+        "CORS_ORIGIN": "http://castamatch.com",
+        "DB_NAME": "castamatch"
     }
 }
