--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ server/database/db/WiredTiger.lock
 server/database/db/WiredTiger.turtle
 server/database/db/diagnostic.data
 server/database/db/journal
+
+# Ignore JS files built from TypeScript
+server/media_server.js
+server/server.js
