--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "start:dev": "tsc -w && concurrently --kill-others \"npm run build:dev_Nodemon\" \"npm run build:dev_Webpack\"",
+    "start:dev": "tsc & concurrently --kill-others \"npm run build:dev_Nodemon\" \"npm run build:dev_Webpack\" \"tsc -w\"",
     "start:https": "npm run build:prod & env-cmd https_production node server/server.js",
     "start:http": " npm run build:prod & env-cmd http_production node server/server.js",
     "build:dev": "webpack",
@@ -73,6 +73,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-hash-link": "^2.1.0",
     "redux": "^3.7.2",
+    "rtmp-server": "^0.2.0",
     "sass-loader": "^6.0.6",
     "shelljs": "^0.8.4",
     "shortid": "^2.2.16",
