change ffmpeg path to linux

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -3,7 +3,7 @@
         "NAME": "development",
         "HTTP_PORT": 3000,
         "CORS_ORIGIN": "http://localhost:3000",
-        "FFMPEG_PATH": "C:/Users/berge/ffmpeg/bin/ffmpeg.exe",
+        "FFMPEG_PATH": "/usr/bin/ffmpeg",
         "DB_NAME": "castamatchdev"
     },
     "https_production": {
