--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,6 @@
     "plugins": [
       "transform-class-properties",
       "transform-object-rest-spread",
-      "@babel/plugin-transform-async-to-generator"
+      "babel-polyfill"
     ]
   }
