fix json format

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -4,7 +4,7 @@
         "HTTP_PORT": 3000,
         "CORS_ORIGIN": "http://localhost:3000",
         "FFMPEG_PATH": "/usr/bin/ffmpeg",
-        "DB_NAME": "castamatchdev",
+        "DB_NAME": "castamatchdev"
     },
     "https_production": {
         "NAME": "https_production",
@@ -12,12 +12,12 @@
         "HTTP_PORT": 80,
         "SSL_DIR": "/etc/letsencrypt/live/castamatch.com/",
         "CORS_ORIGIN": "https://castamatch.com",
-        "DB_NAME": "castamatch",
+        "DB_NAME": "castamatch"
     },
     "http_production": {
         "NAME": "http_production",
         "HTTP_PORT": 80,
         "CORS_ORIGIN": "http://castamatch.com",
-        "DB_NAME": "castamatch",
+        "DB_NAME": "castamatch"
     }
 }
