--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "jest": "^20.0.4",
+    "jest-localstorage-mock": "^2.4.6",
     "node-sass": "^4.14.1",
     "parallelshell": "^3.0.1",
     "react-test-renderer": "^16.0.0",
