--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
-    "flv.js": "^1.5.0",
     "mongoose": "^5.9.12",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
@@ -72,6 +71,7 @@
     "raf": "^3.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.0.0",
+    "react-flv-player": "^1.0.9",
     "react-media": "^1.10.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
