--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.0.0",
     "react-flv-player": "^1.0.9",
+    "react-hls-player": "^1.1.0",
     "react-media": "^1.10.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
