Add windows development environment (without ffmpeg)

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -1,4 +1,10 @@
 {
+    "windows": {
+        "NAME": "development",
+        "HTTP_PORT": 3000,
+        "CORS_ORIGIN": "http://localhost:3000",
+        "DB_NAME": "castamatchdev"
+    },
     "development": {
         "NAME": "development",
         "HTTP_PORT": 3000,
