--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-dom": "^16.0.0",
     "react-flv-player": "^1.0.9",
     "react-media": "^1.10.0",
+    "react-player": "^2.8.2",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
     "react-router-hash-link": "^2.1.0",
