--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "flv.js": "^1.5.0",
     "mongoose": "^5.9.12",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
