--- a/package.json
+++ b/package.json
@@ -93,6 +93,8 @@
     "@types/node": "^14.14.9",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
     "concurrently": "^4.1.2",
     "env-cmd": "^8.0.2",
     "enzyme": "^3.0.0",
