--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:dev": "tsc & npm run build:nodemon & npm run build:webpack",
     "start:https": "npm run build:prod & env-cmd https_production node server/server.js",
     "start:http": " npm run build:prod & env-cmd http_production node server/server.js",
-    "build:dev": "webpack",
+    "build:dev": "tsc & webpack",
     "build:nodemon": "env-cmd development nodemon server/server.js -e js,css,html,hbs",
     "build:webpack": "webpack --watch",
     "build:prod": "webpack -p --env production",
